--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>WebMagdiel</title>
 </head>
 <body>
-    <p>Hola mundo</p>
+    <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Acerca de</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Contacto</a></li>
+    </ul>
 </body>
 </html>
