--- a/html/Tema2_5.html
+++ b/html/Tema2_5.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <center><h1>Práctica de Java y MySQL</h1></center>
+    <center><h2>Material</h2></center>
+    <center><embed src="../documents/Tema 2.5.pdf" width="500" height="300" type="application/pdf"></center>
+        <table width="100%">
+            <tr>
+                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+                <td align="center"><a href="Tema2_4.html"><button align="center">Regresar</button></a></td>
+                <td align="center"><a href="Tema2_6.html"><button align="right">Ir al tema 2.6</button></a></td>
+            </tr>
+        </table>
 </body>
 </html>
