--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebMagdiel</title>
 </head>
-<body>
+<body bgcolor="#00FF00">
     <center><h1>TEMAS INTRODUCTORIOS</h1></center>
     <h2>Unidad 1</h2>
     <ul>
@@ -23,6 +23,6 @@
         <li><a href="html/Tema2_5.html">Tema 2.5 Práctica de Java y MySQL</a></li>
         <li><a href="html/Tema2_6.html">Tema 2.6 API</a></li>
     </ul>
-    
+  
 </body>
 </html>
