--- a/html/Tema1_2.html
+++ b/html/Tema1_2.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <center><h1>Requerimientos</h1></center>
+    <center><h2>Material</h2></center>
+    <center><embed src="../documents/Tema 1.2.pdf" width="500" height="300" type="application/pdf"></center>
+    <table width="100%">
+        <tr>
+            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            <td align="center"><a href="Tema1_1.html"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="Tema1_3.html"><button align="right">Ir al tema 1.3</button></a></td>
+        </tr>
+    </table>
 </body>
 </html>
