Páginas web modificadas

--- a/html/Tema1_1.html
+++ b/html/Tema1_1.html
@@ -8,14 +8,33 @@
 <body>
     <center><h1>Visión general del proceso de Ingeniería de Software</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema1_1.pdf" width="500" height="300" type="application/pdf"></center>
-        <table width="100%">
-            <tr>
-                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
-                <td align="center"><a href="Tema1_2.html"><button align="right">Ir al tema 1.2</button></a></td>
-            </tr>
-        </table>
-    
-        
+    <center><p>Temas relacionado con la visión general del proceso de ingeniería de software</p></center>
+    <center><embed src="../documents/Tema1_1.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>¿Cómo debemos de pensar?</h3>
+    <ul>
+        <li>Como si fuésemos el usuario</li>
+        <li>Como si fuésemos el administrador</li>
+        <li>Como si fuésemos los desarrolladores</li>
+        <li>Como si fuésemos los encargados de prueba y error</li>
+    </ul> 
+    <h3>Consejos para el desarrollo de software</h3>
+    <p>
+        Elaborar un plan de trabajo (alcances, objetivos,
+        cronograma, limitaciones, presupuesto, tiempos de 
+        entrega, los riesgos, recursos humanos, etc)
+    </p>
+    <h3>Consejo</h3> 
+    <p>
+        "El trabajo en equipo no significa que todos hagan todo. Significa que todos hagan lo que hacen mejor“
+    </p>    
+    <h2>Videos</h2>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/unupVqLwayA?si=_Ig4NqAvx-IE7oPj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tOA0V2btxB0?si=u6wELzD1w801wTmL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
+    <table width="100%">
+        <tr>
+            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            <td align="center"><a href="Tema1_2.html"><button align="right">Ir al tema 1.2</button></a></td>
+        </tr>
+    </table> 
 </body>
 </html>
