--- a/html/Tema1_2.html
+++ b/html/Tema1_2.html
@@ -8,7 +8,25 @@
 <body>
     <center><h1>Requerimientos</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 1.2.pdf" width="500" height="300" type="application/pdf"></center>
+    <center><p>Temas relacionados con la ingeniería de requerimientos</p></center>
+    <center><embed src="../documents/Tema 1.2.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>¿Qué es un requisito?</h3> 
+    <p>
+        Condiciones necesarias para algo
+    </p>   
+    <h3>Obtención de requisitos</h3>
+    <ul>
+        <li>Entrevistas</li>
+        <li>Pláticas</li>
+    </ul> 
+    <h3>Consejo</h3> 
+    <p>
+        "Los requisitos son como los ladrillos de tu proyecto; 
+        construye con cuidado y verás un edificio sólido de éxito."
+    </p> 
+    <h2>Videos</h1>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/fLcWpOY3h7k?si=3R_WrWbortG4F1YD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/G6hdmqznMlc?si=1JpEZSluDVTcw3pv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>    
     <table width="100%">
         <tr>
             <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
