--- a/html/Tema1_3.html
+++ b/html/Tema1_3.html
@@ -8,7 +8,29 @@
 <body>
     <center><h1>Arquitectura</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 1.3.pdf" width="500" height="300" type="application/pdf"></center>
+    <center><p>Temas relacionados con la arquitectura de software</p></center>
+    <center><embed src="../documents/Tema 1.3.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>Estilo arquitectónico de tubos y filtros</h3> 
+    <p>
+        Estilo arquitectónico en el que los datos fluyen 
+        a través de una secuencia de componentes de procesamiento 
+        llamados "filtros" conectados por "tubos".
+    </p>   
+    <h3>¿Qué son los tubos y filtros?</h3> 
+    <ul>
+        <li>Tubos: Son canales de comunicación que conectan los filtros.</li>
+        <li>Filtros: Componentes de procesamiento independientes que 
+            reciben datos, realizan una acción específica y envían 
+            los resultados al siguiente filtro o al tubo de salida.
+        </li>
+    </ul> 
+    <h2>Videos</h1>
+    <center>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/n6XvfUG4QBQ?si=SlG1zjOqoX4bQRpJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/IsT5o0orRTo?si=G21pLOnHFsGt2XOz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZjxTNGpgP4k?si=pXq53quWOkQ9X0If" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MbX0hGRiJm8?si=U-5j4jY7ueLJ4eFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </center>
     <table width="100%">
         <tr>
             <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
