--- a/html/Tema1_4.html
+++ b/html/Tema1_4.html
@@ -8,7 +8,35 @@
 <body>
     <center><h1>Patrones de Diseño</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 1.4.pdf" width="500" height="300" type="application/pdf"></center>
+    <center><p>Temas relacionados con el patrón de diseño</p></center>
+    <center><embed src="../documents/Tema 1.4.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>¿Arquitectura o patrones de diseño?</h3> 
+    <p>
+        A diferencia de la arquitectura la cual se 
+        centra más en un panorama general del proyecto, 
+        los patrones de diseño están más enfocados a cómo 
+        mejorar la programación.
+    </p>  
+    <h3>¿A qué te refieres con mejorar?</h3> 
+    <p>
+        Con el pasar de años se encontraron problemas 
+        en los proyectos de software que se repiten 
+        constantemente de ahí surgen estos patrones de 
+        diseño que están aprobados y resuelven problemas 
+        recurrentes.
+    </p>  
+    <h3>Dato curioso</h3> 
+    <p>
+        MVC no es un patrón de diseño, es más una arquitectura 
+        porque separa el código en distintas responsabilidades
+    </p> 
+    <h2>Videos</h1>
+    <center>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9QhIVc2_wkk?si=zxFIdIdTAlAbL3Tg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/G4mFD16PGMg?si=fqhd-hwi4OqlqkTu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gocJeOHtj9w?si=RFSjT9FkZxVTwvgO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/I6HkKii8jlM?si=TMr1GDhb1AcIEAIb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
+    </center>
     <table width="100%">
         <tr>
             <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
