--- a/html/Tema2_2.html
+++ b/html/Tema2_2.html
@@ -8,13 +8,82 @@
 <body>
     <center><h1>SQL</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 2.2.pdf" width="500" height="300" type="application/pdf"></center>
-        <table width="100%">
-            <tr>
-                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
-                <td align="center"><a href="Tema2_1.html"><button align="center">Regresar</button></a></td>
-                <td align="center"><a href="Tema2_3.html"><button align="right">Ir al tema 2.3</button></a></td>
-            </tr>
-        </table>
+    <center><p>Temas relacionados con SQL</p></center>
+    <center><embed src="../documents/Tema 2.2.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>Concepto de índice</h3> 
+    <p>
+        Estructura especial diseñada para mejorar la 
+        velocidad de recuperación y búsqueda de datos 
+        en una tabla. Funciona de manera similar a un 
+        índice en un libro.
+    </p> 
+    <h3>Procedimientos</h3> 
+    <ul>
+        <li>Un conjunto de instrucciones o un programa almacenado en la base 
+            de datos que realiza una tarea específica o una serie de tareas 
+            relacionadas.</li>
+        <li>Se utilizan para automatizar tareas comunes, ejecutar  
+            consultas complejas, realizar operaciones de actualización 
+            en los datos.</li>
+    </ul> 
+    <center><table border="1">
+        <tr>
+            <th>Característica</th>
+            <th>T-SQL</th>
+            <th>PL/SQL</th>
+        </tr>
+        <tr>
+            <td>Procedimientos almacenados</td>
+            <td>SI</td>
+            <td>SI</td>
+        </tr>
+        <tr>
+            <td>Funciones almacenadas</td>
+            <td>SI</td>
+            <td>SI</td>
+        </tr>
+        <tr>
+            <td>Triggers</td>
+            <td>SI</td>
+            <td>SI</td>
+        </tr>
+        <tr>
+            <td>Variables</td>
+            <td>SI</td>
+            <td>SI</td>
+        </tr>
+        <tr>
+            <td>Manejo de excepciones</td>
+            <td>TRY...CATCH</td>
+            <td>DECLARE...EXCEPTION</td>
+        </tr>
+        <tr>
+            <td>Cursores</td>
+            <td>SI</td>
+            <td>SI</td>
+        </tr>
+        <tr>
+            <td>Transacciones</td>
+            <td>BEGIN TRANSACTION,<br> COMMIT, ROLLBACK</td>
+            <td>BEGIN, COMMIT, <br>ROLLBACK</td>
+        </tr>
+        <tr>
+            <td>Características específicas</td>
+            <td>Variables de tabla,<br>funciones específicas de <br>SQL Server, instrucciones <br>específicas de SQL Server</td>
+            <td>Manejo de excepciones, <br>seguridad y auditoría <br>específicas de Oracle</td>
+        </tr>
+        <tr>
+            <td>Herramientas</td>
+            <td>SQL Server Management <br>Studio</td>
+            <td>Oracle SQL Developer</td>
+        </tr>
+    </table></center>
+    <table width="100%">
+        <tr>
+            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            <td align="center"><a href="Tema2_1.html"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="Tema2_3.html"><button align="right">Ir al tema 2.3</button></a></td>
+        </tr>
+    </table>
 </body>
 </html>
