--- a/html/Tema2_3.html
+++ b/html/Tema2_3.html
@@ -8,13 +8,28 @@
 <body>
     <center><h1>Triggers</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 2.3.pdf" width="500" height="300" type="application/pdf"></center>
-        <table width="100%">
-            <tr>
-                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
-                <td align="center"><a href="Tema2_2.html"><button align="center">Regresar</button></a></td>
-                <td align="center"><a href="Tema2_4.html"><button align="right">Ir al tema 2.4</button></a></td>
-            </tr>
-        </table>
+    <p>Temas relacionados con los triggers</p>
+    <center><embed src="../documents/Tema 2.3.pdf" width="600" height="500" type="application/pdf"></center>
+    <h2>Videos</h2>
+    <center>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Hb4wkSClKec?si=7OMHUXrSP3Ob57nO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/DRon_SFQ5IY?si=OTn8wnvdkA9_pvC1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jLk4BtAKZUM?si=EhfiU7Bwkc9qgA1Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/d6Vm5LRSMYM?si=LiHlbUF54Ez_qb95" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </center>
+    <center><h2>Tablas de la base de datos</h2>
+        <img src="../img/8.png" alt="Tablas" width="300" height="300">
+        <h2>Creación de triggers</h2>
+        <img src="../img/7.png" alt="Triggers" width="1000" height="300">
+        <h2>Triggers creados</h2>
+        <img src="../img/9.png" alt="Triggers creados" width="500" height="300">
+    </center>
+    <table width="100%">
+        <tr>
+            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            <td align="center"><a href="Tema2_2.html"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="Tema2_4.html"><button align="right">Ir al tema 2.4</button></a></td>
+        </tr>
+    </table>
 </body>
 </html>
