--- a/html/Tema2_4.html
+++ b/html/Tema2_4.html
@@ -8,13 +8,39 @@
 <body>
     <center><h1>Programación Orientada a Objetos</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 2.4.pdf" width="500" height="300" type="application/pdf"></center>
-        <table width="100%">
-            <tr>
-                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
-                <td align="center"><a href="Tema2_3.html"><button align="center">Regresar</button></a></td>
-                <td align="center"><a href="Tema2_5.html"><button align="right">Ir al tema 2.5</button></a></td>
-            </tr>
-        </table>
+    <center><p>Temas relacionados con la programación orientada a objetos</p></center>
+    <center><embed src="../documents/Tema 2.4.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>Concepto de clase</h3>
+    <p>Es mi molde en donde tendremos los atributos y métodos generales
+        Los atributos son sus características y los métodos cómo se comportan
+        Por ejemplo un cubo de Minecraft será nuestra clase o plantilla.
+        Puede tener atributos como: nombre, textura y dimensión.
+    </p> 
+    <h3>Concepto de Objeto</h3>
+    <ul>
+        <li>Instancia de una clase.</li>
+        <li>Podemos crear muchos objetos que deriven de la clase creada.</li>
+    </ul> 
+    <h3>Definición formal</h3> 
+    <ul>
+        <li>Abstracción (De lo particular a lo general).</li>
+        <li>Encapsulamiento (Acceso a datos).</li>
+        <li>Polimorfismo (Mismo método, respuestas diferentes).</li>
+        <li>Herencia (Lo que podemos pasar a otros objetos)</li>
+    </ul> 
+    <h2>Videos</h2>
+    <center>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AAKoccH230Y?si=aDNwbqCAMilffYCh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ykpT5P7171M?si=3dO45H8kQfxtLOZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/DlphYPc_HKk?si=WNWhjHIQUYtL9VHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Nka4JSBgf7I?si=tmYDeDk59u0oXM4N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </center>
+    <table width="100%">
+        <tr>
+            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            <td align="center"><a href="Tema2_3.html"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="Tema2_5.html"><button align="right">Ir al tema 2.5</button></a></td>
+        </tr>
+    </table>
 </body>
 </html>
