--- a/html/Tema2_5.html
+++ b/html/Tema2_5.html
@@ -8,7 +8,8 @@
 <body>
     <center><h1>Práctica de Java y MySQL</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 2.5.pdf" width="500" height="300" type="application/pdf"></center>
+    <p>Temas relacionados con java y Mysql</p>
+    <center><embed src="../documents/Tema 2.5.pdf" width="600" height="500" type="application/pdf"></center>
         <table width="100%">
             <tr>
                 <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
