--- a/html/Tema2_6.html
+++ b/html/Tema2_6.html
@@ -8,12 +8,50 @@
 <body>
     <center><h1>API</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 2.6.pdf" width="500" height="300" type="application/pdf"></center>
-        <table width="100%">
-            <tr>
-                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
-                <td align="center"><a href="Tema2_5.html"><button align="center">Regresar</button></a></td>
-            </tr>
-        </table>
+    <center><p>Temas relacionados con las apis</p></center>
+    <center><embed src="../documents/Tema 2.6.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>FRONTEND VS BACKEND</h3>
+    <p>El frontend se encarga de la interfaz y la 
+        experiencia del usuario en una aplicación web, 
+        mientras que el backend se encarga de la lógica, 
+        el procesamiento y la gestión de datos en el servidor.</p> 
+    <h3>Concepto de Api (mediante boxeo)</h3>
+    <p>
+        Frontend (Boxeador en el Ring): Imaginemos que 
+        el frontend es como un boxeador en el ring. Este 
+        boxeador es la cara visible de la pelea, lo que el 
+        público ve. Él lanza golpes y recibe golpes, representando 
+        la interfaz de usuario de una aplicación.
+    </p> 
+    <p>
+        Backend (Entrenador en la Esquina): El backend  
+        sería como el entrenador que está en la esquina 
+        del ring. Este entrenador tiene un conocimiento 
+        profundo y estrategias para la pelea. Él proporciona 
+        orientación y lógica para que el boxeador (frontend) 
+        pueda pelear eficazmente.
+    </p> 
+    <h3>Comunicación mediante apis</h3> 
+    <p>
+        API (Instrucciones entre Rounds): En el boxeo, entre 
+        rounds, el entrenador puede dar instrucciones al boxeador, 
+        proporcionando estrategias específicas para el próximo round. 
+        Esto sería similar a una API en desarrollo web. Es como el 
+        conjunto de instrucciones que el frontend recibe del backend 
+        para solicitar información o realizar acciones específicas.
+    </p>
+    <h2>Videos</h2>
+    <center>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/50RbVujPPGs?si=tQJu9Hd9qJsWF9_D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/mawPztD3zl0?si=2OP9sQSaxEik3ScP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SXZ0kDZbOas?si=hwqkXsy9r5SA7wKU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kG-fLp9BTRo?si=5PWabE8zxo-PWVCu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </center>
+    <table width="100%">
+        <tr>
+            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            <td align="center"><a href="Tema2_5.html"><button align="center">Regresar</button></a></td>
+        </tr>
+    </table>
 </body>
 </html>
