--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body bgcolor="#00FF00">
     <center><h1>TEMAS INTRODUCTORIOS</h1></center>
+    <p>Aquí encontraremos información para repasar temas de ingeniería de software, programación orientada a objetos, como realizar prácticas con java y Mysql</p>
     <h2>Unidad 1</h2>
     <ul>
         <li><a href="html/Tema1_1.html">Tema 1.1. Visión general del proceso de Ingeniería de Software</a></li>
