--- a/html/Tema2_1.html
+++ b/html/Tema2_1.html
@@ -8,13 +8,44 @@
 <body>
     <center><h1>Bases de Datos Relacionales</h1></center>
     <center><h2>Material</h2></center>
-    <center><embed src="../documents/Tema 2.1.pdf" width="500" height="300" type="application/pdf"></center>
-        <table width="100%">
-            <tr>
-                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
-                <td align="center"><a href="Tema1_4.html"><button align="center">Regresar</button></a></td>
-                <td align="center"><a href="Tema2_2.html"><button align="right">Ir al tema 2.2</button></a></td>
-            </tr>
-        </table>
+    <center><p>Temas relacionados con las bases de datos relacionales</p></center>
+    <center><embed src="../documents/Tema 2.1.pdf" width="600" height="500" type="application/pdf"></center>
+    <h3>Primera forma normal</h3> 
+    <p>
+        En cada una de las columnas de las tablas 
+        solo se puede tener 1 valor y no puede a ver 
+        grupos de repetición
+    </p> 
+    <h3>Segunda forma normal</h3> 
+    <ul>
+        <li>Cualquier campo no clave debería
+            ser dependiente de toda la clave primaria </li>
+        <li>(La necesidad de revisar surge cuando estamos 
+            usando índices compuestos, porque cuando el índice 
+            solo tiene una columna automáticamente ya está en 
+            2FN)</li>
+    </ul> 
+    <h3>Tercera forma normal</h3> 
+    <p>
+        Ningún campo no clave depende de ningún 
+        otro campo no clave
+    </p> 
+    <center><h2>Ejemplo de primera forma normal</h2>
+    <img src="../img/1.png" alt="No esta en primera forma normal" width="500" height="300">
+    <img src="../img/2.png" alt="Si esta en primera forma normal" width="500" height="300">
+    <h2>Ejemplo de segunda forma normal</h2>
+    <img src="../img/3.png" alt="No esta en segunda forma normal" width="500" height="300">
+    <img src="../img/4.png" alt="Si esta en segunda forma normal" width="500" height="300">
+    <h2>Ejemplo de tercera forma normal</h2>
+    <img src="../img/5.png" alt="No esta en tercera forma normal" width="500" height="300">
+    <img src="../img/6.png" alt="Si esta en tercera forma normal" width="500" height="300">
+    </center>
+    <table width="100%">
+        <tr>
+            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            <td align="center"><a href="Tema1_4.html"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="Tema2_2.html"><button align="right">Ir al tema 2.2</button></a></td>
+        </tr>
+    </table>
 </body>
 </html>
