--- a/html/Tema2_2.html
+++ b/html/Tema2_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.2</title>
 </head>
-<body>
+<body bgcolor="#00FFFF">
     <center><h1>SQL</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con SQL</p></center>
@@ -80,7 +80,7 @@
     </table></center>
     <table width="100%">
         <tr>
-            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            
             <td align="center"><a href="Tema2_1.html"><button align="center">Regresar</button></a></td>
             <td align="center"><a href="Tema2_3.html"><button align="right">Ir al tema 2.3</button></a></td>
         </tr>
