--- a/html/Tema2_5.html
+++ b/html/Tema2_5.html
@@ -5,17 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.5</title>
 </head>
-<body>
+<body bgcolor="#00FFFF">
     <center><h1>Práctica de Java y MySQL</h1></center>
     <center><h2>Material</h2></center>
-    <p>Temas relacionados con java y Mysql</p>
+    <center><p>Práctica de java con Mysql</p></center>
     <center><embed src="../documents/Tema 2.5.pdf" width="600" height="500" type="application/pdf"></center>
-        <table width="100%">
-            <tr>
-                <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
-                <td align="center"><a href="Tema2_4.html"><button align="center">Regresar</button></a></td>
-                <td align="center"><a href="Tema2_6.html"><button align="right">Ir al tema 2.6</button></a></td>
-            </tr>
-        </table>
+    <center><h2>Vistas de la aplicación</h2>
+        <img src="../img/21.png" alt="Vista" width="500" height="300">
+        <img src="../img/20.png" alt="Vista" width="500" height="300">
+        <h2>Consulta y MVC</h2>
+        <img src="../img/19.png" alt="Consulta" width="500" height="300">
+        <img src="../img/18.png" alt="MVC" width="500" height="300">
+        <h2>Base de datos y diagrama de entidad relación</h2>
+        <img src="../img/14.png" alt="Base de datos" width="500" height="300">
+        <img src="../img/16.png" alt="Diagrama entidad relacion" width="500" height="300">
+        <h2>Conexión de java con MySQL</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nKbonwin7Zg?si=aHoZlhdtNT8vrQyi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nKbonwin7Zg?si=RsQO3NMqXg3CTTap" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </center>   
+    <table width="100%">
+        <tr>
+           
+            <td align="center"><a href="Tema2_4.html"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="Tema2_6.html"><button align="right">Ir al tema 2.6</button></a></td>
+        </tr>
+    </table>
 </body>
 </html>
