--- a/html/Tema1_1.html
+++ b/html/Tema1_1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1.1</title>
 </head>
-<body>
+<body bgcolor="#00FFFF">
     <center><h1>Visión general del proceso de Ingeniería de Software</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionado con la visión general del proceso de ingeniería de software</p></center>
@@ -32,7 +32,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/tOA0V2btxB0?si=u6wELzD1w801wTmL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
     <table width="100%">
         <tr>
-            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            
             <td align="center"><a href="Tema1_2.html"><button align="right">Ir al tema 1.2</button></a></td>
         </tr>
     </table> 
