--- a/html/Tema1_2.html
+++ b/html/Tema1_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1.2</title>
 </head>
-<body>
+<body bgcolor="#00FFFF">
     <center><h1>Requerimientos</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con la ingeniería de requerimientos</p></center>
@@ -29,7 +29,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/G6hdmqznMlc?si=1JpEZSluDVTcw3pv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>    
     <table width="100%">
         <tr>
-            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+           
             <td align="center"><a href="Tema1_1.html"><button align="center">Regresar</button></a></td>
             <td align="center"><a href="Tema1_3.html"><button align="right">Ir al tema 1.3</button></a></td>
         </tr>
