--- a/html/Tema1_3.html
+++ b/html/Tema1_3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1.3</title>
 </head>
-<body>
+<body bgcolor="#00FFFF">
     <center><h1>Arquitectura</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con la arquitectura de software</p></center>
@@ -33,7 +33,7 @@
     </center>
     <table width="100%">
         <tr>
-            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+           
             <td align="center"><a href="Tema1_2.html"><button align="center">Regresar</button></a></td>
             <td align="center"><a href="Tema1_4.html"><button align="right">Ir al tema 1.4</button></a></td>
         </tr>
