--- a/html/Tema2_3.html
+++ b/html/Tema2_3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.3</title>
 </head>
-<body>
+<body bgcolor="#00FFFF">
     <center><h1>Triggers</h1></center>
     <center><h2>Material</h2></center>
     <p>Temas relacionados con los triggers</p>
@@ -26,7 +26,7 @@
     </center>
     <table width="100%">
         <tr>
-            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+           
             <td align="center"><a href="Tema2_2.html"><button align="center">Regresar</button></a></td>
             <td align="center"><a href="Tema2_4.html"><button align="right">Ir al tema 2.4</button></a></td>
         </tr>
