--- a/html/Tema2_6.html
+++ b/html/Tema2_6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.6</title>
 </head>
-<body>
+<body bgcolor="#00FFFF">
     <center><h1>API</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionados con las apis</p></center>
@@ -49,7 +49,7 @@
     </center>
     <table width="100%">
         <tr>
-            <td align="center"><a href="../index.html"><button align="right">Menú</button></a></td>
+            
             <td align="center"><a href="Tema2_5.html"><button align="center">Regresar</button></a></td>
         </tr>
     </table>
