--- a/html/encabezado.html
+++ b/html/encabezado.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#00FF00">
     <center><h1>TEMAS INTRODUCTORIOS</h1></center>
-    <center><p>Aquí encontraremos información para repasar temas de ingeniería de software, programación orientada a objetos, como realizar prácticas con java y Mysql</p></center>
+    <center><p>Aquí encontraremos información para repasar temas de ingeniería de software, programación orientada a objetos y prácticas con java y Mysql</p></center>
     
 </body>
 </html>
