--- a/html/Tema1_1.html
+++ b/html/Tema1_1.html
@@ -6,7 +6,7 @@
     <title>Tema 1.1</title>
 </head>
 <body bgcolor="#00FFFF">
-    <center><h1>Visión general del proceso de Ingeniería de Software</h1></center>
+    <center><h1>Visión General del Proceso de Ingeniería de Software</h1></center>
     <center><h2>Material</h2></center>
     <center><p>Temas relacionado con la visión general del proceso de ingeniería de software</p></center>
     <center><embed src="../documents/Tema1_1.pdf" width="600" height="500" type="application/pdf"></center>
