--- a/html/Tema2_5.html
+++ b/html/Tema2_5.html
@@ -8,18 +8,18 @@
 <body bgcolor="#00FFFF">
     <center><h1>Práctica de Java y MySQL</h1></center>
     <center><h2>Material</h2></center>
-    <center><p>Práctica de java con Mysql</p></center>
+    <center><p>Práctica de Java con Mysql</p></center>
     <center><embed src="../documents/Tema 2.5.pdf" width="600" height="500" type="application/pdf"></center>
-    <center><h2>Vistas de la aplicación</h2>
+    <center><h2>Vistas de la Aplicación</h2>
         <img src="../img/21.png" alt="Vista" width="500" height="300">
         <img src="../img/20.png" alt="Vista" width="500" height="300">
-        <h2>Consulta y MVC</h2>
+        <h2>Consulta de 2 tablas y estructura MVC</h2>
         <img src="../img/19.png" alt="Consulta" width="500" height="300">
         <img src="../img/18.png" alt="MVC" width="500" height="300">
-        <h2>Base de datos y diagrama de entidad relación</h2>
+        <h2>Base de Datos y Diagrama de Entidad Relación</h2>
         <img src="../img/14.png" alt="Base de datos" width="500" height="300">
         <img src="../img/16.png" alt="Diagrama entidad relacion" width="500" height="300">
-        <h2>Conexión de java con MySQL</h2>
+        <h2>Conexión de Java con MySQL</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/nKbonwin7Zg?si=aHoZlhdtNT8vrQyi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/nKbonwin7Zg?si=RsQO3NMqXg3CTTap" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </center>   
