--- a/html/Tema2_6.html
+++ b/html/Tema2_6.html
@@ -8,7 +8,7 @@
 <body bgcolor="#00FFFF">
     <center><h1>API</h1></center>
     <center><h2>Material</h2></center>
-    <center><p>Temas relacionados con las apis</p></center>
+    <center><p>Temas Relacionados con las Apis</p></center>
     <center><embed src="../documents/Tema 2.6.pdf" width="600" height="500" type="application/pdf"></center>
     <h3>FRONTEND VS BACKEND</h3>
     <p>El frontend se encarga de la interfaz y la 
