--- a/html/Tema1_1.html
+++ b/html/Tema1_1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1.1</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>Visión General del Proceso de Ingeniería de Software</h1></center>
@@ -33,8 +34,9 @@
     <table width="100%">
         <tr>
             
-            <td align="center"><a href="Tema1_2.html"><button align="right">Ir al tema 1.2</button></a></td>
+            <td align="center"><a href="html/Tema1_2.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 1.2</button></a></td>
         </tr>
     </table> 
+    
 </body>
 </html>
