--- a/html/Tema1_3.html
+++ b/html/Tema1_3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1.3</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>Arquitectura</h1></center>
@@ -20,7 +21,7 @@
     <ul>
         <li>Tubos: Son canales de comunicación que conectan los filtros.</li>
         <li>Filtros: Componentes de procesamiento independientes que 
-            reciben datos, realizan una acción específica y envían 
+            reciben datos, realizan una acción específica y envían
             los resultados al siguiente filtro o al tubo de salida.
         </li>
     </ul> 
@@ -34,8 +35,8 @@
     <table width="100%">
         <tr>
            
-            <td align="center"><a href="Tema1_2.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema1_4.html"><button align="right">Ir al tema 1.4</button></a></td>
+            <td align="center"><a href="html/Tema1_2.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema1_4.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 1.4</button></a></td>
         </tr>
     </table>
 </body>
