--- a/html/Tema2_1.html
+++ b/html/Tema2_1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.1</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>Bases de Datos Relacionales</h1></center>
@@ -30,21 +31,21 @@
         Ningún campo no clave depende de ningún 
         otro campo no clave
     </p> 
-    <center><h2>Ejemplo de primera forma normal</h2>
+    <center><h2>Ejemplo de Primera Forma Normal</h2>
     <img src="../img/1.png" alt="No esta en primera forma normal" width="500" height="300">
     <img src="../img/2.png" alt="Si esta en primera forma normal" width="500" height="300">
-    <h2>Ejemplo de segunda forma normal</h2>
+    <h2>Ejemplo de Segunda Forma Normal</h2>
     <img src="../img/3.png" alt="No esta en segunda forma normal" width="500" height="300">
     <img src="../img/4.png" alt="Si esta en segunda forma normal" width="500" height="300">
-    <h2>Ejemplo de tercera forma normal</h2>
+    <h2>Ejemplo de Tercera Forma Normal</h2>
     <img src="../img/5.png" alt="No esta en tercera forma normal" width="500" height="300">
     <img src="../img/6.png" alt="Si esta en tercera forma normal" width="500" height="300">
     </center>
     <table width="100%">
         <tr>
           
-            <td align="center"><a href="Tema1_4.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema2_2.html"><button align="right">Ir al tema 2.2</button></a></td>
+            <td align="center"><a href="html/Tema1_4.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema2_2.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 2.2</button></a></td>
         </tr>
     </table>
 </body>
