--- a/html/Tema2_4.html
+++ b/html/Tema2_4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.4</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF" >
     <center><h1>Programación Orientada a Objetos</h1></center>
@@ -38,8 +39,8 @@
     <table width="100%">
         <tr>
            
-            <td align="center"><a href="Tema2_3.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema2_5.html"><button align="right">Ir al tema 2.5</button></a></td>
+            <td align="center"><a href="html/Tema2_3.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema2_5.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 2.5</button></a></td>
         </tr>
     </table>
 </body>
