--- a/html/Tema2_5.html
+++ b/html/Tema2_5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.5</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>Práctica de Java y MySQL</h1></center>
@@ -13,7 +14,7 @@
     <center><h2>Vistas de la Aplicación</h2>
         <img src="../img/21.png" alt="Vista" width="500" height="300">
         <img src="../img/20.png" alt="Vista" width="500" height="300">
-        <h2>Consulta de 2 tablas y estructura MVC</h2>
+        <h2>Consulta de 2 Tablas y Estructura MVC</h2>
         <img src="../img/19.png" alt="Consulta" width="500" height="300">
         <img src="../img/18.png" alt="MVC" width="500" height="300">
         <h2>Base de Datos y Diagrama de Entidad Relación</h2>
@@ -26,8 +27,8 @@
     <table width="100%">
         <tr>
            
-            <td align="center"><a href="Tema2_4.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema2_6.html"><button align="right">Ir al tema 2.6</button></a></td>
+            <td align="center"><a href="html/Tema2_4.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema2_6.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 2.6</button></a></td>
         </tr>
     </table>
 </body>
