--- a/html/Menu.html
+++ b/html/Menu.html
@@ -4,24 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        h2 {
+            background-color: #007bff;
+            color: #fff;
+            font-size: 24px;
+            margin: 0;
+            padding: 20px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        li {
+            font-size: 18px;
+            margin: 5px 0;
+        }
+
+        li:hover {
+            background-color: #007bff;
+            color: #fff;
+            transition: background-color 0.3s, color 0.3s;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body bgcolor="yellow">
-    <h2>Unidad 1</h2>
+   <center> <h2>Unidad 1</h2>
     <ul>
-        <li><a href="Tema1_1.html" target="contenido">Tema 1.1</a></li>
-        <li><a href="Tema1_2.html" target="contenido">Tema 1.2</a></li>
-        <li><a href="Tema1_3.html" target="contenido">Tema 1.3</a></li>
-        <li><a href="Tema1_4.html" target="contenido">Tema 1.4</a></li>
+        <li>Tema 1.1</li>
+        <li>Tema 1.2</li>
+        <li>Tema 1.3</li>
+        <li>Tema 1.4</li>
     </ul>
     <h2>Unidad 2</h2>
     <ul>
-        <li><a href="Tema2_1.html" target="contenido">Tema 2.1</a></li>
-        <li><a href="Tema2_2.html" target="contenido">Tema 2.2</a></li>
-        <li><a href="Tema2_3.html" target="contenido">Tema 2.3</a></li>
-        <li><a href="Tema2_4.html" target="contenido">Tema 2.4</a></li>
-        <li><a href="Tema2_5.html" target="contenido">Tema 2.5</a></li>
-        <li><a href="Tema2_6.html" target="contenido">Tema 2.6</a></li>
+        <li>Tema 2.1</li>
+        <li>Tema 2.2</li>
+        <li>Tema 2.3</li>
+        <li>Tema 2.4</li>
+        <li>Tema 2.5</li>
+        <li>Tema 2.6</li>
     </ul>
-  
+  </center>
 </body>
 </html>
