--- a/html/Tema1_2.html
+++ b/html/Tema1_2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1.2</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>Requerimientos</h1></center>
@@ -22,7 +23,7 @@
     <h3>Consejo</h3> 
     <p>
         "Los requisitos son como los ladrillos de tu proyecto; 
-        construye con cuidado y verás un edificio sólido de éxito."
+        construye con cuidado y verás un edificio sólido de éxito de otro modo tu edificio caerá"
     </p> 
     <h2>Videos</h1>
     <center><iframe width="560" height="315" src="https://www.youtube.com/embed/fLcWpOY3h7k?si=3R_WrWbortG4F1YD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -30,8 +31,8 @@
     <table width="100%">
         <tr>
            
-            <td align="center"><a href="Tema1_1.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema1_3.html"><button align="right">Ir al tema 1.3</button></a></td>
+            <td align="center"><a href="html/Tema1_1.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema1_3.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 1.3</button></a></td>
         </tr>
     </table>
 </body>
