--- a/html/Tema1_4.html
+++ b/html/Tema1_4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 1.4</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>Patrones de Diseño</h1></center>
@@ -40,8 +41,8 @@
     <table width="100%">
         <tr>
            
-            <td align="center"><a href="Tema1_3.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema2_1.html"><button align="right">Ir al tema 2.1</button></a></td>
+            <td align="center"><a href="html/Tema1_3.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema2_1.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 2.1</button></a></td>
         </tr>
     </table>
 </body>
