--- a/html/Tema2_2.html
+++ b/html/Tema2_2.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.2</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
+    <style>
+        .Estilo{
+            width: 100%;
+            border-collapse: collapse;
+            border: 1px solid #ddd;
+        }
+
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #ddd;
+        }
+    </style>
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>SQL</h1></center>
@@ -26,7 +51,7 @@
             consultas complejas, realizar operaciones de actualización 
             en los datos.</li>
     </ul> 
-    <center><table border="1">
+    <center><table border="1" class="Estilo">
         <tr>
             <th>Característica</th>
             <th>T-SQL</th>
@@ -81,8 +106,8 @@
     <table width="100%">
         <tr>
             
-            <td align="center"><a href="Tema2_1.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema2_3.html"><button align="right">Ir al tema 2.3</button></a></td>
+            <td align="center"><a href="html/Tema2_1.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema2_3.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 2.3</button></a></td>
         </tr>
     </table>
 </body>
