--- a/html/Tema2_3.html
+++ b/html/Tema2_3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2.3</title>
+    <link rel="stylesheet" type="text/css" href="../css/style2.css">
 </head>
 <body bgcolor="#00FFFF">
     <center><h1>Triggers</h1></center>
@@ -17,18 +18,18 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/jLk4BtAKZUM?si=EhfiU7Bwkc9qgA1Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/d6Vm5LRSMYM?si=LiHlbUF54Ez_qb95" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </center>
-    <center><h2>Tablas de la base de datos</h2>
+    <center><h2>Tablas de la Base de Datos</h2>
         <img src="../img/8.png" alt="Tablas" width="300" height="300">
-        <h2>Creación de triggers</h2>
+        <h2>Creación de Triggers</h2>
         <img src="../img/7.png" alt="Triggers" width="1000" height="300">
-        <h2>Triggers creados</h2>
+        <h2>Triggers Creados</h2>
         <img src="../img/9.png" alt="Triggers creados" width="500" height="300">
     </center>
     <table width="100%">
         <tr>
            
-            <td align="center"><a href="Tema2_2.html"><button align="center">Regresar</button></a></td>
-            <td align="center"><a href="Tema2_4.html"><button align="right">Ir al tema 2.4</button></a></td>
+            <td align="center"><a href="html/Tema2_2.html" onclick="cargarContenido(this); return false;"><button align="center">Regresar</button></a></td>
+            <td align="center"><a href="html/Tema2_4.html" onclick="cargarContenido(this); return false;"><button align="right">Ir al tema 2.4</button></a></td>
         </tr>
     </table>
 </body>
